--- a/_config.yml
+++ b/_config.yml
@@ -76,5 +76,6 @@ deploy:
 
 backup:
     type: git
-    repository:
-       github: git@github.com:sain801028/Blogger.git,Hexo
+    repository: git@github.com:sain801028/Blogger.git
+    branch: Hexo
+    message: update
